force-app/main/default/objects/Customer_Org__c/Customer_Org__c.object-meta.xml
<CustomObject>
    <description>Customer Non Salesforce Organizations</description>
    <label>Customer Org Access</label>
    <nameField>
        <label>Organization</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Orgs Access</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>