force-app/main/default/objects/Customer_Org__c/fields/Oauth_Access_token__c.field-meta.xml
<CustomField>
    <fullName>Oauth_Access_token__c</fullName>
    <label>Oauth Access Token</label>
    <length>150</length>
    <type>Text</type>
</CustomField>