force-app/main/default/objects/Customer_Org__c/fields/QR_Code_Authenticator__c.field-meta.xml
<CustomField>
    <fullName>QR_Code_Authenticator__c</fullName>
    <inlineHelpText>Código QR para el plugin del authenticator: https://chrome.google.com/webstore/detail/authenticator/bhghoamapcdpbohphigoooaddinpkbai/related</inlineHelpText>
    <label>QR_Code Authenticator</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>