force-app/main/default/objects/Customer_Org__c/fields/QR_Code_picture__c.field-meta.xml
<CustomField>
    <fullName>QR_Code_picture__c</fullName>
    <inlineHelpText>Insert the link to the picture file in Drive</inlineHelpText>
    <label>QR Code picture</label>
    <type>Url</type>
</CustomField>