force-app/main/default/objects/Customer_Org__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Production</fullName>
            </value>
            <value>
                <fullName>Salesforce Sandbox</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Pardot</fullName>
            </value>
            <value>
                <fullName>Social Studio</fullName>
            </value>
            <value>
                <fullName>Social Studio Automate</fullName>
            </value>
            <value>
                <fullName>Datorama</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>