force-app/main/default/objects/Customer_Org__c/fields/Username_email__c.field-meta.xml
<CustomField>
    <fullName>Username_email__c</fullName>
    <label>Username email</label>
    <type>Email</type>
</CustomField>