force-app/main/default/objects/Customer_Org__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Solution__c</columns>
    <columns>Login__c</columns>
    <columns>Username__c</columns>
    <columns>Username_email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>