force-app/main/default/objects/Customer_Org__c/listViews/BasicQueueAmazon_Customer_Org.listView-meta.xml
<ListView>
    <fullName>BasicQueueAmazon_Customer_Org</fullName>
    <filterScope>Queue</filterScope>
    <label>BasicQueueAmazon</label>
    <queue>BasicQueueAmazon</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>