force-app/main/default/objects/Customer_Org__c/listViews/Marketing_Orgs.listView-meta.xml
<ListView>
    <fullName>Marketing_Orgs</fullName>
    <columns>NAME</columns>
    <columns>Solution__c</columns>
    <columns>Login__c</columns>
    <columns>Username__c</columns>
    <columns>Password__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Solution__c</field>
        <operation>equals</operation>
        <value>Marketing Cloud,Pardot,Social Studio,Social Studio Automate</value>
    </filters>
    <label>Marketing Orgs</label>
</ListView>