force-app/main/default/objects/Customer_Org__c/listViews/Salesforce_orgs.listView-meta.xml
<ListView>
    <fullName>Salesforce_orgs</fullName>
    <columns>NAME</columns>
    <columns>Solution__c</columns>
    <columns>Login__c</columns>
    <columns>Username__c</columns>
    <columns>Password__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Solution__c</field>
        <operation>equals</operation>
        <value>Salesforce Sandbox,Salesforce Production</value>
    </filters>
    <label>Salesforce orgs</label>
</ListView>